<resources>
    <string name="app_name">QReceipt</string>
    <string name="login">LOGIN</string>
    <string name="sign_in">로그인 하기</string>
    <string name="id">아이디</string>
    <string name="input_email">이메일을 입력하세요</string>
    <string name="sign_in2">로그인</string>
    <string name="not_yet_sign_up">아직 회원가입을 안했다면?</string>
    <string name="sign_up">회원가입</string>
    <string name="register">Register</string>
    <string name="sign_up2">회원가입하기</string>
    <string name="email">이메일</string>
    <string name="email_hint">example@qreceipt.com</string>
    <string name="name">이름</string>
    <string name="name_hint">김영수</string>
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="address">주소</string>
    <string name="address_hint">시, 군, 구, 동</string>
    <string name="address_hint2">상세주소</string>
    <string name="phonenumber">전화번호</string>
    <string name="user_type">유형 선택</string>
    <string name="phonenumber_slash">-</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>